2014-10-28  Corinna Vinschen  <corinna@vinschen.de>

	* xidepend: Make PDF file dependent on the same input files as the
	HTML file of the same name to trigger automatic rebuild of PDFs on
	source file changes as well.

2014-10-28  Corinna Vinschen  <corinna@vinschen.de>

	* cygwinenv.xml: Change default setting of dosfilewarning.
	* new-features.xml (ov-new1.7.33): Document aforementioned change.

2014-10-28  Corinna Vinschen  <corinna@vinschen.de>

	* ntsec.xml: Fix Solaris doc URLs.

2014-10-28  Corinna Vinschen  <corinna@vinschen.de>

	* ntsec.xml: Try to make an expression less ambiguous.

2014-10-27  Luke Kendall  <luke.kendall@cisra.canon.com.au>
	    Corinna Vinschen  <corinna@vinschen.de>

	* ntsec.xml: More language fixes.

2014-10-27  Corinna Vinschen  <corinna@vinschen.de>

	* new-features.xml (ov-new1.7.33): Document empty $PATH handling.

2014-10-27  Corinna Vinschen  <corinna@vinschen.de>

	* new-features.xml (ov-new1.7.33): Fix paragraph order.

2014-10-27  Corinna Vinschen  <corinna@vinschen.de>

	* highlights.xml: Rearrange itemizedlist markup slightly.
	* new-features.xml (ov-new1.7.33): Add setfacl -b option.
	* utils.xml (setfacl): Ditto.

2014-10-24  Luke Kendall  <luke.kendall@cisra.canon.com.au>

	* ntsec.xml: More language and typo fixes.

2014-10-23  Corinna Vinschen  <corinna@vinschen.de>

	* ntsec.xml: Fix language.

2014-10-22  Corinna Vinschen  <corinna@vinschen.de>

	* Makefile.in: Create install targets.
	(cygwin-ug-net/cygwin-ug-net.pdf): Create subdir to allow building PDF
	even if subdir is missing.
	(cygwin-api/cygwin-api.pdf): Ditto.
	* configure.ac: Add AC_PROG_INSTALL rule.
	* configure: Regenerate.
	* new-features.xml (ov-new1.7.33): Add installation of docs.

2014-10-22  Corinna Vinschen  <corinna@vinschen.de>

	* posix.xml (std-gnu): Add ffsl, ffsll, quotactl.
	(std-notes): Add restrictions of quotactl.

2014-10-22  Yaakov Selkowitz  <yselkowi@redhat.com>

	* new-features.xml (ov-new1.7.33): Document stime.