@@ -1,3 +1,8 @@
+2014-10-29  Dave Habermann  <dahabermann@dow.com>
+
+	* ntsec.xml (ntsec-mapping-caching): Describe service dependencies
+	in terms of cygserver.
+
 2014-10-28  Corinna Vinschen  <corinna@vinschen.de>
 
 	* xidepend: Make PDF file dependent on the same input files as the
